[gd_scene load_steps=4 format=3 uid="uid://d05qq8yv3u7n"]

[ext_resource type="Texture2D" uid="uid://pqx4ufpwsei2" path="res://Assets/logoNEW.png" id="1_kqbvd"]
[ext_resource type="Script" path="res://Scenes/title_ui.gd" id="1_vuggy"]
[ext_resource type="FontFile" uid="uid://oigad7atfyty" path="res://Nicolast.otf" id="3_38jx8"]

[node name="title_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vuggy")

[node name="LogoNew" type="Sprite2D" parent="."]
position = Vector2(286, 229)
rotation = -0.394444
scale = Vector2(1.28819, 1.20922)
texture = ExtResource("1_kqbvd")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 309.0
offset_right = 1093.0
offset_bottom = 383.0
theme_override_fonts/font = ExtResource("3_38jx8")
theme_override_font_sizes/font_size = 36
text = "New Game"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 736.0
offset_top = 396.0
offset_right = 1093.0
offset_bottom = 470.0
theme_override_fonts/font = ExtResource("3_38jx8")
theme_override_font_sizes/font_size = 36
text = "Level Select"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 737.0
offset_top = 480.0
offset_right = 1094.0
offset_bottom = 554.0
theme_override_fonts/font = ExtResource("3_38jx8")
theme_override_font_sizes/font_size = 36
text = "Options"

[node name="Button4" type="Button" parent="."]
layout_mode = 0
offset_left = 737.0
offset_top = 563.0
offset_right = 1094.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("3_38jx8")
theme_override_font_sizes/font_size = 36
text = "Credits"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 722.0
offset_top = 709.0
offset_right = 1137.0
offset_bottom = 1260.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 28.0
offset_right = 426.0
offset_bottom = 544.0
text = "Director/Lead:
             Noah Bearden (spoiboi)

Level Design/Game Elements:
             Noah Bearden
             Owen Addison
             Gavin Shaner
             Kane Maley
             Braiden Larson

Soundtrack:
             Preston P

Past Contributor who left us to make his own game 
but did a lot:
             Parker Peterson

Special Thanks:
             UNL Game Dev Club"

[node name="Button5" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 864.0
offset_right = 376.0
offset_bottom = 958.0
theme_override_fonts/font = ExtResource("3_38jx8")
theme_override_font_sizes/font_size = 36
text = "<Back"

[node name="Button6" type="Button" parent="."]
offset_left = 1185.0
offset_top = 51.0
offset_right = 1359.0
offset_bottom = 198.0
text = "1"

[node name="Button7" type="Button" parent="."]
offset_left = 1416.0
offset_top = 54.0
offset_right = 1590.0
offset_bottom = 201.0
text = "2"

[node name="Button8" type="Button" parent="."]
offset_left = 1638.0
offset_top = 54.0
offset_right = 1812.0
offset_bottom = 201.0
text = "3"

[node name="Button9" type="Button" parent="."]
offset_left = 1186.0
offset_top = 270.0
offset_right = 1360.0
offset_bottom = 417.0
text = "4"

[node name="Button10" type="Button" parent="."]
offset_left = 1420.0
offset_top = 273.0
offset_right = 1594.0
offset_bottom = 420.0
text = "5"

[node name="Button11" type="Button" parent="."]
offset_left = 1651.0
offset_top = 267.0
offset_right = 1825.0
offset_bottom = 414.0
text = "6"

[node name="Button12" type="Button" parent="."]
offset_left = 1267.0
offset_top = 462.0
offset_right = 1441.0
offset_bottom = 609.0
text = "7"

[node name="Button13" type="Button" parent="."]
offset_left = 1549.0
offset_top = 462.0
offset_right = 1723.0
offset_bottom = 609.0
text = "8"

[connection signal="pressed" from="Button" to="." method="on_new_game"]
[connection signal="pressed" from="Button2" to="." method="on_level_select"]
[connection signal="pressed" from="Button3" to="." method="on_options"]
[connection signal="pressed" from="Button4" to="." method="on_credits"]
[connection signal="pressed" from="Button5" to="." method="on_back"]
[connection signal="pressed" from="Button6" to="." method="level_1"]
[connection signal="pressed" from="Button7" to="." method="level_2"]
[connection signal="pressed" from="Button8" to="." method="level_3"]
[connection signal="pressed" from="Button9" to="." method="level_4"]
[connection signal="pressed" from="Button10" to="." method="level_5"]
[connection signal="pressed" from="Button11" to="." method="level_6"]
[connection signal="pressed" from="Button12" to="." method="level_7"]
[connection signal="pressed" from="Button13" to="." method="level_8"]
